header con logo

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,11 @@
 .header-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     background-color: #000;
     height: 100px;
+}
+
+img{
+    max-width: 80px;
 }
