--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,7 @@
 .footer-container{
-    background-color: blueviolet;
+    background-color: #333;
     color: white;
     height: 50px;
+    /*display: flex;*/
+    padding: 10px;
 }
