--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,7 +10,22 @@
     padding: 10px;
 }
 
-#nombre-empresa{
+#container-empresa{
     display: flex;
     flex-direction: column;
+}
+
+#nombre-empresa{
+    font-size: medium;
+    margin-bottom: 2px;
+    margin-top:6px;
+}
+
+#copyright{
+    font-size: 12px;
+    margin-top: 2px;
+}
+#contacto p{
+    font-size: medium;
+    padding-right: 15px;
 }
