--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,18 @@ body, html {
   .content {
     flex: 1;
     padding: 20px;
+    text-align: center;
   }
-  
+
+#title-container{
+  margin-inline: 40%;
+  padding-bottom: 20px;
+}
+
+#container{
+  border-radius: 20px;
+  border: 4px solid #000;
+  padding: 10px;
+}
 
   
