--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -122,3 +122,11 @@ select {
     width: 380px;
 }
 
+#action-button{
+    display: fixed;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    padding-left: 50%;
+}
+
