--- a/src/assets/css/Organizadorn.css
+++ b/src/assets/css/Organizadorn.css
@@ -17,7 +17,15 @@ body {
     background-color: darkred; /* Cambia el color de fondo al pasar el cursor */
   }  
   
-  
+  h2{
+    color: white;
+    background-color:black;
+    padding-bottom: 8px;
+    margin: auto;
+    width: 50%;
+    text-align: center;
+  }
+
   h1 {
     color: #333;
   }
